--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -265,6 +265,62 @@
               }
             </div>
 
+            <!--EVENT RUN PLAYER-->
+            <div
+              class="table-cell first"
+            >
+              @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventId')) {
+                @if (getEventPlayer(eventFormGroup, i, 'eventRunPlayer'); as eventPlayer) {
+                  RUN PLAYER #{{ eventPlayer.match_player.match_number }} {{ eventPlayer.person?.second_name | uppercase }}
+                }
+              } @else {
+                @if (getEventTeam(eventFormGroup, i, 'eventTeam'); as selectedTeam) {
+                  @if (isRunPlay(eventFormGroup, i, 'eventPlayType')) {
+                    <app-search-player-in-match-autocomplete
+                      [action]="'select'"
+                      [placeholder]="'run player'"
+                      [players]="getPlayersForSelectedTeam(selectedTeam)"
+                      [control]="getFormControl(
+                        this.eventForm,
+                        i,
+                        'eventRunPlayer',
+                        'events'
+                      )"
+                    ></app-search-player-in-match-autocomplete>
+                  }
+                }
+
+              }
+            </div>
+
+            <!--EVENT PASS PLAYER-->
+            <div
+              class="table-cell first"
+            >
+              @if (getFormDataByIndexAndKey(eventFormGroup, i, 'eventId')) {
+                @if (getEventPlayer(eventFormGroup, i, 'eventReceiverPlayer'); as eventPlayer) {
+                  RECEIVER PLAYER #{{ eventPlayer.match_player.match_number }} {{ eventPlayer.person?.second_name | uppercase }}
+                }
+              } @else {
+                @if (getEventTeam(eventFormGroup, i, 'eventTeam'); as selectedTeam) {
+                  @if (isPassReceivedPlay(eventFormGroup, i, 'eventPlayType')) {
+                    <app-search-player-in-match-autocomplete
+                      [action]="'select'"
+                      [placeholder]="'receiver player'"
+                      [players]="getPlayersForSelectedTeam(selectedTeam)"
+                      [control]="getFormControl(
+                        this.eventForm,
+                        i,
+                        'eventReceiverPlayer',
+                        'events'
+                      )"
+                    ></app-search-player-in-match-autocomplete>
+                  }
+                }
+
+              }
+            </div>
+
 
             <!--              ACTIONS-->
             @if (eventFormGroup.get("eventId" + i)!.value; as id) {
