match events adding

--- a/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
+++ b/src/app/components/player-match/add-edit-player-match-table/add-edit-player-match-table.component.html
@@ -271,7 +271,7 @@
                               "
                             ></app-actions-buttons>
                           } @else {
-                            else
+                            <!--                            else-->
                             <app-actions-buttons
                               [id]="id"
                               [index]="i"
