--- a/src/app/shared/ui/dialogs/delete-dialog/delete-dialog.component.html
+++ b/src/app/shared/ui/dialogs/delete-dialog/delete-dialog.component.html
@@ -19,7 +19,7 @@
         "
         [id]="dialogId"
       >
-        All {{ item | uppercase }}'s stats will be lost!
+        All {{ itemUpperCaseTitle(item) }}'s stats will be lost!
       </p>
       <p style="text-align: center; padding: 10px">
         <tui-checkbox-labeled formControlName="checkboxToAction" size="l">
