--- a/src/app/shared/ui/search/search-player-in-match-autocomplete/search-player-in-match-autocomplete.component.html
+++ b/src/app/shared/ui/search/search-player-in-match-autocomplete/search-player-in-match-autocomplete.component.html
@@ -6,6 +6,7 @@
 
   <tui-combo-box
     [formControl]="control"
+    [tuiTextfieldCleaner]="true"
   >
     {{ action | uppercase }} {{ placeholder | uppercase }}
     @if (players) {
