--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
@@ -11,5 +11,26 @@
   display: grid;
   grid-template-columns: auto;
   grid-gap: 10px;
-  padding: 5px;
+  //padding: 5px;
+}
+
+.event-num-qtr-row {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto;
+  grid-gap: 5px;
+}
+
+.event-down-distance {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto;
+  grid-gap: 5px;
+}
+
+.event-hash-type {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto;
+  grid-gap: 5px;
 }
