--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
@@ -16,21 +16,21 @@
 
 .event-num-qtr-row {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 50% 50%;
   grid-template-rows: auto;
-  grid-gap: 5px;
+  grid-gap: 10px;
 }
 
 .event-down-distance {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 50% 50%;
   grid-template-rows: auto;
-  grid-gap: 5px;
+  grid-gap: 10px;
 }
 
 .event-hash-type {
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 50% 50%;
   grid-template-rows: auto;
-  grid-gap: 5px;
+  grid-gap: 10px;
 }
