--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -132,6 +132,7 @@
                   [control]="getFormControl(this.eventForm, i, 'eventPlayType', this.arrayName)"
                   [placeholder]="'play type'"
                   [enumObjects]="eventPlayTypeOptions"
+                  (itemSelected)="onPlayTypeChange(this.eventsArray, $event, i)"
                 ></app-select-enum>
               </div>
             </div>
